[package]
name = "ao-chat-client"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bimap = "0.6"
crossterm = { version = "0.20", features = ["event-stream"] }
directories = "3.0"
futures-util = { version = "0.3", default-features = false }
nadylib = { git = "https://github.com/Nadybot/nadylib.git", default-features = false }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tui = { version = "0.16", default-features = false, features = ["crossterm"] }

[profile.release]
codegen-units = 1
debug = false
incremental = false
lto = true
opt-level = 3
panic = "abort"
